make more vm2 crates building
* fix state-api
* move StateSet to state-store-api
* fix vm2-state-api
* fix vm2-statedb
* fix vm2 account
* cleanup and fix starcoin-vm2-account-provider
* fix vm2-rpc-api
* fix vm2-dev

--- a/state/api-v2/Cargo.toml
+++ b/state/api-v2/Cargo.toml
@@ -6,8 +6,8 @@ serde = { features = ["derive"], workspace = true }
 starcoin-crypto = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-state-tree = { workspace = true }
-starcoin-types = { workspace = true }
-starcoin-vm-types = { workspace = true }
+starcoin-types = { path = "../../vm2/types" }
+starcoin-vm-types = { path = "../../vm2/vm-types" }
 forkable-jellyfish-merkle = { workspace = true }
 once_cell = { workspace = true }
 bytes = { workspace = true }
