--- a/state/statedb-v2/Cargo.toml
+++ b/state/statedb-v2/Cargo.toml
@@ -5,12 +5,12 @@ forkable-jellyfish-merkle = { workspace = true }
 lru = { workspace = true }
 parking_lot = { workspace = true }
 serde = { workspace = true }
-starcoin-vm2-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-logger = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 starcoin-state-tree = { workspace = true }
-starcoin-vm2-types = { workspace = true }
-starcoin-vm2-vm-types = { workspace = true }
+starcoin-types = { path = "../../vm2/types" }
+starcoin-vm-types = { path = "../../vm2/vm-types" }
 thiserror = { workspace = true }
 
 [package]
