--- a/vm2/account/api/Cargo.toml
+++ b/vm2/account/api/Cargo.toml
@@ -10,7 +10,7 @@ schemars = { workspace = true }
 serde = { features = ["derive"], workspace = true }
 serde_bytes = { workspace = true }
 serde_json = { workspace = true }
-starcoin-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-service-registry = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 thiserror = { workspace = true }
