--- a/vm2/types/Cargo.toml
+++ b/vm2/types/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = { workspace = true }
 starcoin-accumulator = { workspace = true }
 starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-uint = { workspace = true }
+starcoin-state-store-api = { workspace = true }
 starcoin-vm2-vm-types = { path = "../vm-types", package = "starcoin-vm-types" }
 starcoin-vm2-resource-viewer = { workspace = true }
 starcoin-vm2-abi-decoder = { workspace = true }
