--- a/chain/service/Cargo.toml
+++ b/chain/service/Cargo.toml
@@ -13,6 +13,7 @@ starcoin-dag = { workspace = true }
 starcoin-logger = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-state-api = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-vm-types = { workspace = true }
