--- a/network-rpc/Cargo.toml
+++ b/network-rpc/Cargo.toml
@@ -15,6 +15,7 @@ starcoin-network-rpc-api = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-txpool = { workspace = true }
 starcoin-txpool-api = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-types = { workspace = true }
 
 [dev-dependencies]
