--- a/rpc/server/Cargo.toml
+++ b/rpc/server/Cargo.toml
@@ -58,6 +58,7 @@ starcoin-state-api = { workspace = true }
 starcoin-state-service = { workspace = true }
 starcoin-state-tree = { workspace = true }
 starcoin-statedb = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-sync-api = { workspace = true }
 starcoin-txpool = { workspace = true }
 starcoin-txpool-api = { workspace = true }
