--- a/vm/starcoin-transactional-test-harness/Cargo.toml
+++ b/vm/starcoin-transactional-test-harness/Cargo.toml
@@ -55,6 +55,7 @@ starcoin-rpc-server = { workspace = true }
 starcoin-state-api = { workspace = true }
 starcoin-state-tree = { workspace = true }
 starcoin-statedb = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
 starcoin-vm-types = { workspace = true }
