--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -22,6 +22,7 @@ starcoin-time-service = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-dag = { workspace = true }
 thiserror = { workspace = true }
 once_cell = { workspace = true }
