--- a/chain/open-block/Cargo.toml
+++ b/chain/open-block/Cargo.toml
@@ -12,6 +12,7 @@ starcoin-chain-api = { workspace = true }
 starcoin-executor = { workspace = true }
 starcoin-state-api = { workspace = true }
 starcoin-statedb = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-vm-runtime = { workspace = true }
