fix clippy warnings and code fmt

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,7 +32,7 @@ jobs:
           RUSTFLAGS: -D warnings
         with:
           command: clippy
-          args: --all-targets -- -Aclippy::doc_lazy_continuation
+          args: --all-targets
 
       - name: build
         uses: actions-rs/cargo@v1
