--- a/config/example/barnard/genesis_config2.json
+++ b/config/example/barnard/genesis_config2.json
@@ -1757,7 +1757,7 @@
     "module_publishing_allowed": false
   },
   "consensus_config": {
-    "uncle_rate_target": 500,
+    "uncle_rate_target": 1,
     "base_block_time_target": 10000,
     "base_reward_per_block": 1000000000,
     "base_reward_per_uncle_percent": 10,
@@ -1765,9 +1765,12 @@
     "base_block_difficulty_window": 24,
     "min_block_time_target": 2000,
     "max_block_time_target": 60000,
-    "base_max_uncles_per_block": 2,
+    "base_max_uncles_per_block": 16,
     "base_block_gas_limit": 50000000,
-    "strategy": 3
+    "strategy": 3,
+    "max_transaction_per_block": 700,
+    "pruning_depth": 185798,
+    "pruning_finality": 86400
   },
   "association_key_pair": [
     null,
@@ -1784,6 +1787,5 @@
     "min_action_delay": 86400000
   },
   "time_service_type": "RealTimeService",
-  "transaction_timeout": 86400,
-  "dag_effective_height": 18446744073709551615
+  "transaction_timeout": 86400
 }
