--- a/config/example/proxima/genesis_config2.json
+++ b/config/example/proxima/genesis_config2.json
@@ -494,6 +494,18 @@
           5
         ],
         [
+          "starcoin_natives.frombcs.base",
+          5
+        ],
+        [
+          "starcoin_natives.secp256k1.base",
+          5
+        ],
+        [
+          "move_stdlib.vector.spawn_from.legacy_per_abstract_memory_unit",
+          5
+        ],
+        [
           "nursery.debug.print.base_cost",
           1
         ],
@@ -1885,7 +1897,7 @@
     "module_publishing_allowed": true
   },
   "consensus_config": {
-    "uncle_rate_target": 240,
+    "uncle_rate_target": 1,
     "base_block_time_target": 10000,
     "base_reward_per_block": 10000000000,
     "base_reward_per_uncle_percent": 10,
@@ -1893,9 +1905,12 @@
     "base_block_difficulty_window": 24,
     "min_block_time_target": 2000,
     "max_block_time_target": 60000,
-    "base_max_uncles_per_block": 2,
+    "base_max_uncles_per_block": 16,
     "base_block_gas_limit": 50000000,
-    "strategy": 3
+    "strategy": 3,
+    "max_transaction_per_block": 700,
+    "pruning_depth": 185798,
+    "pruning_finality": 86400
   },
   "association_key_pair": [
     null,
@@ -1912,6 +1927,5 @@
     "min_action_delay": 60000
   },
   "time_service_type": "RealTimeService",
-  "transaction_timeout": 86400,
-  "dag_effective_height": 18446744073709551615
+  "transaction_timeout": 86400
 }
