Reorganize imports by crate and add documentation
- Group imports by standard library, third-party crates, and Starcoin crates
- Merge imports from same crate to reduce duplication
- Add README2.md for tx-factory usage documentation

--- a/cmd/tx-factory/Cargo.toml
+++ b/cmd/tx-factory/Cargo.toml
@@ -4,7 +4,7 @@ path = "src/main.rs"
 
 [[bin]]
 name = "starcoin-vm2-txfactory"
-path = "src/vm2_txn.rs"
+path = "src/vm2_txn_main.rs"
 
 [dependencies]
 anyhow = { workspace = true }
